syntax = "proto3";

package common;

import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/compozy/compozy/pkg/pb";

// -----------------------------------------------------------------------------
// Metadata
// -----------------------------------------------------------------------------

message WorkflowMetadata {
  string source = 1;
  string correlation_id = 2;
  string workflow_id = 3;
  string workflow_exec_id = 4;
  string workflow_state_id = 5;
  google.protobuf.Timestamp time = 6;
  string subject = 7;
}

message TaskMetadata {
  string source = 1;
  string correlation_id = 2;
  string workflow_id = 3;
  string workflow_exec_id = 4;
  string workflow_state_id = 5;
  string task_id = 6;
  string task_exec_id = 7;
  string task_state_id = 8;
  google.protobuf.Timestamp time = 9;
  string subject = 10;
}

message AgentMetadata {
  string source = 1;
  string correlation_id = 2;
  string workflow_id = 3;
  string workflow_exec_id = 4;
  string workflow_state_id = 5;
  string task_id = 6;
  string task_exec_id = 7;
  string task_state_id = 8;
  string agent_id = 9;
  string agent_exec_id = 10;
  string agent_state_id = 11;
  google.protobuf.Timestamp time = 12;
  string subject = 13;
}

message ToolMetadata {
  string source = 1;
  string correlation_id = 2;
  string workflow_id = 3;
  string workflow_exec_id = 4;
  string workflow_state_id = 5;
  string task_id = 6;
  string task_exec_id = 7;
  string task_state_id = 8;
  string tool_id = 9;
  string tool_exec_id = 10;
  string tool_state_id = 11;
  google.protobuf.Timestamp time = 12;
  string subject = 13;
}

message LogMetadata {
  string source = 1;
  string correlation_id = 2;
  string request_id = 3;
  string workflow_id = 4;
  string workflow_exec_id = 5;
  string workflow_state_id = 6;
  string task_id = 7;
  string task_exec_id = 8;
  string task_state_id = 9;
  optional string agent_id = 10;
  optional string agent_exec_id = 11;
  optional string agent_state_id = 12;
  optional string tool_id = 13;
  optional string tool_exec_id = 14;
  optional string tool_state_id = 15;
  google.protobuf.Timestamp time = 16;
  string subject = 17;
}

// -----------------------------------------------------------------------------
// Common Types
// -----------------------------------------------------------------------------

message ErrorResult {
  string message = 1;
  optional string code = 2;
  optional google.protobuf.Struct details = 3;
}

enum ResponseStatus {
  RESPONSE_STATUS_UNSPECIFIED = 0;
  RESPONSE_STATUS_SUCCESS = 1;
  RESPONSE_STATUS_FAILED = 2;
}

// -----------------------------------------------------------------------------
// Tool Requests and Responses
// -----------------------------------------------------------------------------

message ToolRequest {
  string request_id = 1;
  string tool_id = 2;
  string tool_exec_id = 3;
  string description = 4;
  google.protobuf.Struct input_schema = 5;
  google.protobuf.Struct output_schema = 6;
  google.protobuf.Struct input = 7;
}

message ToolResponse {
  string request_id = 1;
  string tool_id = 2;
  string tool_exec_id = 3;
  google.protobuf.Struct output = 4;
  ResponseStatus status = 5;
}

// -----------------------------------------------------------------------------
// Agent Requests and Responses
// -----------------------------------------------------------------------------

message ActionRequest {
  string action_id = 1;
  string prompt = 2;
  google.protobuf.Struct output_schema = 3;
}

message AgentRequest {
  string request_id = 1;
  string agent_id = 2;
  string agent_exec_id = 3;
  string instructions = 4;
  ActionRequest action_request = 5;
  google.protobuf.Struct config = 6;
  repeated ToolRequest tools = 7;
}

message AgentResponse {
  string request_id = 1;
  string agent_id = 2;
  string agent_exec_id = 3;
  google.protobuf.Struct output = 4;
  ResponseStatus status = 5;
}
